--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,33 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
+      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Create Retail Package
-      run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -p 17424 -w 12326
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+      - name: Replace toc-versions
+        uses: Numynum/ToCVersions@master
+        with:
+          args: Plugins/*/*.toc *.toc
 
-    - name: Create Classic Package
-      run: curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash -s -- -p 17424 -w 12326 -g 1.13.6
-      env:
-        CF_API_KEY: ${{ secrets.CF_API_KEY }}
-        GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
-        WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+      - name: Create version specific ToC files
+        uses: Numynum/ToCDuplicator@master
+        with:
+          files: Plugins/*/*.toc *.toc
+
+      - name: Create Retail Package
+        uses: BigWigsMods/packager@master
+
+      - name: Create Classic Package
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g classic
+
+      - name: Create Burning Crusade Package
+        uses: BigWigsMods/packager@master
+        with:
+          args: -g bcc
