--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     env:
       CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
+      GITHUB_OAUTH: ${{ secrets.OAUTH_GITHUB }}
       WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
 
     steps:
@@ -19,8 +19,6 @@ jobs:
 
       - name: Replace toc-versions
         uses: Numynum/ToCVersions@master
-        with:
-          args: Plugins/*/*.toc *.toc
 
       - name: Create version specific ToC files
         uses: Numynum/ToCDuplicator@master
