fix classic & bbc release
added missing args

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,10 @@ jobs:
 
       - name: Create Classic Package
         uses: BigWigsMods/packager@master
+        with:
+          args: -g classic
 
       - name: Create Burning Crusade Package
         uses: BigWigsMods/packager@master
+        with:
+          args: -g bcc
