--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .DS_Store
 modules/._CB_PlayedTime.lua
 modules/._CB_PlayedTime_Loc.lua
+._Chocolate.lua
+._Options.lua
+modules/._CB_PlayedTime_Options.lua
