--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,29 +9,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    env:
-      CF_API_KEY: ${{ secrets.CF_API_KEY }}
-      GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
-      WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
-
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Replace toc-versions
         uses: Numynum/ToCVersions@master
 
-      - name: Create version specific ToC files
-        uses: Numynum/ToCDuplicator@master
-
-      - name: Create Retail Package
-        uses: BigWigsMods/packager@master
-
-      - name: Create Classic Package
-        uses: BigWigsMods/packager@master
+      - name: Create Package
+        uses: BigWigsMods/packager@v2
         with:
-          args: -g classic
-
-      - name: Create Burning Crusade Package
-        uses: BigWigsMods/packager@master
-        with:
-          args: -g bcc
+          args: -S
+        env:
+          CF_API_KEY: ${{ secrets.CF_API_KEY }}
+          GITHUB_OAUTH: ${{ secrets.GITHUB_OAUTH }}
+          WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
